recuperando alterações feitas anteriormente.

--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -69,12 +69,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content id="main-content" >
+<ion-content id="main-content">
   <ion-row>
 
 
 
-    <ion-col class="column column-fixed" style="margin: -5px; border-right: 4px solid var(--ion-color-primary);" *ngIf="!exibirMenu" size="4">
+    <ion-col class="column column-fixed" style="margin: -5px; border-right: 4px solid var(--ion-color-primary);"
+      *ngIf="!exibirMenu" size="4">
       <!-- a -->
 
 
