--- a/ClassNote/src/app/pages/turma/turma.page.html
+++ b/ClassNote/src/app/pages/turma/turma.page.html
@@ -68,7 +68,7 @@
           <ion-grid>
             <ion-row wrap>
               <ion-col class="turma" size="12" size-md="6" size-lg="4" *ngFor="let turma of turmasFilter">
-                <ion-card (click)="acessarTurma(turma.nome_turma)" [ngClass]="defineColor(turma.ensino)">
+                <ion-card (click)="acessarTurma(turma.id_turma)" [ngClass]="defineColor(turma.ensino)">
                   <ion-card-header>
                     <ion-card-title>{{ turma.nome_turma }}</ion-card-title>
 
