--- a/ClassNote/src/app/pages/admin/gerenciar-usuarios/gerenciar-usuarios.page.html
+++ b/ClassNote/src/app/pages/admin/gerenciar-usuarios/gerenciar-usuarios.page.html
@@ -10,39 +10,22 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-md="5">
-        <ion-row class="header-row">
-          <ion-col size="4">
-            <ion-label class="header-label">Header 1</ion-label>
-          </ion-col>
-          <ion-col size="4">
-            <ion-label class="header-label">Header 2</ion-label>
-          </ion-col>
-          <ion-col size="4">
-            <ion-label class="header-label">Header 3</ion-label>
-          </ion-col>
-        </ion-row>
-
-        <ion-row *ngFor="let usuario of usuarios" class="data-row">
-          <ion-col class="ion-align-items-center text" size="4">
+  <ion-row class="ion-justify-content-center ion-align-items-center">
+    <ion-col size="12" size-sm="6">
+      <ion-list>
+        <ion-item *ngFor="let usuario of usuarios">
+          <ion-col (click)="acessarUsuario(usuario.id_usuario)" class="ion-align-items-center text" size="6">
             <ion-label class="data-label">{{ usuario.username }}</ion-label>
           </ion-col>
-          <ion-col class="ion-align-items-center text" size="4">
+          <ion-col class="ion-align-items-center ion-text-end" size="6">
             <ion-label class="data-label">{{ usuario.role }}</ion-label>
           </ion-col>
-          <ion-col class="ion-text-center" size="4">
-            <ion-icon (click)="editarUsuario(usuario)" name="create-outline"></ion-icon>
-            <ion-icon style="margin-left: 2.5em;" name="trash-outline"></ion-icon>
-          </ion-col>
-        </ion-row>
-      </ion-col>
+        </ion-item>
+      </ion-list>
+    </ion-col>
 
-      <ion-col size="7">
-
-      </ion-col>
-    </ion-row>
-
-  </ion-grid>
+    <ion-col class="ion-text-center" size="12" size-sm="6">
+      criar novo usuario
+    </ion-col>
+  </ion-row>
 </ion-content>
