--- a/ClassNote/src/app/components/home-admin/inicio/inicio.component.html
+++ b/ClassNote/src/app/components/home-admin/inicio/inicio.component.html
@@ -1,3 +1,9 @@
-<p>
-  inicio works!
-</p>
+<ion-content>
+  <ion-row class="ion-justify-content-center ion-align-items-center">
+    <ion-col class="ion-text-center">
+      Olá, bem vindo ao Início!
+    </ion-col>
+  </ion-row>
+</ion-content>
+
+<router-outlet></router-outlet>
