loading em turma-aulas e turma

--- a/ClassNote/src/app/pages/login/login.page.html
+++ b/ClassNote/src/app/pages/login/login.page.html
@@ -33,7 +33,7 @@
     <ion-grid class="ion-justify-content-center ion-padding">
       <ion-row class="ion-justify-content-center">
         <ion-col size-sm="8" size="12" class="ion-text-center">
-          <img style="position: absolute;" src="../../../assets/img/logo-anglo-tatui.png" alt="Logo" width="70%"
+          <img class="fade-in" style="position: absolute;" src="../../../assets/img/logo-anglo-tatui.png" alt="Logo" width="70%"
             style="max-width: 225px;">
         </ion-col>
       </ion-row>
