--- a/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
+++ b/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
@@ -12,20 +12,27 @@
 <ion-content>
   <ion-list>
     <div>
-      <app-calendar (dataEvent)="receiveDataFromChild($event)"
+      <app-calendar class="ion-margin" (dataEvent)="receiveDataFromChild($event)"
         style="display: flex; justify-content: end;"></app-calendar>
     </div>
     <div *ngFor="let aula of aulas">
       <ion-item (click)="selectAula(aula.id_aula, nome_turma)" style="cursor: pointer;">
 
-        <ion-label *ngIf="aula.id_aula != null">
+        <ion-label *ngIf="isLoaded">
+          <ion-skeleton-text [animated]="true" style="width: 40px"></ion-skeleton-text>
+          <ion-skeleton-text [animated]="true" style="width: 170px"></ion-skeleton-text>
+          <ion-skeleton-text [animated]="true" style="width: 120px"></ion-skeleton-text>
+          <ion-skeleton-text [animated]="true" style="width: 200px"></ion-skeleton-text>
+        </ion-label>
+
+        <ion-label *ngIf="aula.id_aula != null && !isLoaded">
           <h2>Aula {{aula.num_aula}}</h2>
           <p>Disciplina: {{aula.nome_disciplina}}</p>
           <p>Professor: {{aula.nome_professor}}</p>
           <p>Conteúdo: {{aula.conteudo}}</p>
         </ion-label>
 
-        <ion-label *ngIf="aula.id_aula == null">
+        <ion-label *ngIf="aula.id_aula == null && !isLoaded">
           <h2>Aula {{aula.num_aula}}</h2>
           <p>{{aula.nome_disciplina}}</p>
         </ion-label>
