--- a/ClassNote/src/app/components/form-aula/form-aula.component.scss
+++ b/ClassNote/src/app/components/form-aula/form-aula.component.scss
@@ -1,6 +1,30 @@
-// .modal-right {
-//   position: absolute;
-//   top: 50%; /* Alinha verticalmente */
-//   right: 0; /* Posiciona à direita */
-//   transform: translateY(-50%); /* Ajusta a posição vertical */
-// }
+.options-container {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 4px;
+}
+
+.option {
+  width: 2em;
+  height: 2em;
+  border: 1px solid #1f80ffc2;
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  line-height: 2em;
+
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.selected {
+  background-color: #1f80ffee;
+  color: #fff;
+  opacity: 1;
+}
+
+mat-form-field{
+  width: 100%;
+}
