--- a/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
+++ b/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
@@ -28,7 +28,7 @@
         <ion-label *ngIf="aula.id_aula != null && !isLoaded">
           <h2>Aula {{aula.num_aula}}</h2>
           <p>Disciplina: {{aula.nome_disciplina}}</p>
-          <p>Professor: {{aula.nome_professor}}</p>
+          <p>Professor: {{aula.username}}</p>
           <p>Conteúdo: {{aula.conteudo}}</p>
         </ion-label>
 
