--- a/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
+++ b/ClassNote/src/app/pages/turma-aulas/turma-aulas.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <ion-list>
     <div>
-      <app-calendar class="ion-margin" (dataEvent)="receiveDataFromChild($event)"
+      <app-calendar class="ion-margin" (dataEvent)="receiveDataFromCalendar($event)"
         style="display: flex; justify-content: end;"></app-calendar>
     </div>
     <div *ngFor="let aula of aulas">
