--- a/ClassNote/src/app/pages/turma/turma.page.html
+++ b/ClassNote/src/app/pages/turma/turma.page.html
@@ -9,7 +9,7 @@
         <ion-col size="3">
           <img src=".././../../../assets/img/logo-anglo-tatui.png" alt="logo-anglo-tatui">
         </ion-col>
-        <ion-col style="margin: auto;" size="9">Bem vindo, {{username}}</ion-col>
+        <ion-col style="margin: auto;" size="9">Bem vindo, {{usuario.username}}</ion-col>
       </ion-row>
     </ion-toolbar>
   </ion-header>
