--- a/ClassNote/src/app/components/new-form-aula/new-form-aula.component.html
+++ b/ClassNote/src/app/components/new-form-aula/new-form-aula.component.html
@@ -15,7 +15,7 @@
         <ion-icon name="person" slot="start"></ion-icon>
         <mat-form-field style="opacity: 0.6;" appearance="fill">
           <mat-label>Professor</mat-label>
-          <input matInput placeholder="Selecione o professor" formControlName="username" readonly>
+          <input minlength="3" matInput placeholder="Selecione o professor" formControlName="username" readonly>
           <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let disciplina of filteredDisciplinas | async" [value]="disciplina">
               {{ disciplina.username }}
@@ -29,7 +29,7 @@
         <ion-icon name="school" slot="start"></ion-icon>
         <mat-form-field appearance="fill">
           <mat-label>Disciplina</mat-label>
-          <input [value]="aulaSelecionada.nome_disciplina" matInput placeholder="Selecione a disciplina"
+          <input minlength="3" [value]="aulaSelecionada.nome_disciplina" matInput placeholder="Selecione a disciplina"
             [formControl]="disciplinaCtrl" [matAutocomplete]="auto2">
 
           <mat-autocomplete #auto2="matAutocomplete" (optionSelected)="onDisciplinaSelected($event)"
