--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -16,7 +16,7 @@
   </ion-header>
 
   <ion-content style="height: 100%;" class="ion-no-padding ion-no-margin">
-    <ion-list lines="none">
+    <ion-list mode="md" lines="none">
       <ion-list-header mode="ios">
         <ion-label>Gerenciamento</ion-label>
       </ion-list-header>
@@ -94,7 +94,7 @@
         </ion-toolbar>
       </ion-header>
 
-      <ion-list lines="none">
+      <ion-list mode="md" lines="none">
         <ion-list-header mode="ios">
           <ion-label>Gerenciamento</ion-label>
         </ion-list-header>
