removendocomponentes não utilizados

--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -53,7 +53,7 @@
 
 </ion-menu>
 
-<ion-header *ngIf="exibirMenu">
+<ion-header mode="md" *ngIf="exibirMenu">
   <ion-toolbar>
     <ion-buttons slot="start">
       <!-- Botão do menu de hambúrguer -->
