--- a/ClassNote/src/app/components/home-admin/usuarios/usuarios.component.html
+++ b/ClassNote/src/app/components/home-admin/usuarios/usuarios.component.html
@@ -1,40 +1,44 @@
-
-
 <ion-row>
-  <ion-col size="12" class="ion-justify-content-center ion-text-center">
+  <ion-col mode="md" size="12" class="ion-justify-content-center ion-text-center">
 
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ion-row>
+      <ion-col>
+        <ion-title>Usuários</ion-title>
+      </ion-col>
+    </ion-row>
 
-      <!--- Note that these columns can be defined in any order.
+      <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
-    
-      <!-- id_usuario Column -->
-      <ng-container matColumnDef="id_usuario">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.id_usuario}} </td>
-      </ng-container>
-    
-      <!-- username Column -->
-      <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef> username </th>
-        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-      </ng-container>
-    
-      <!-- role Column -->
-      <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef> role </th>
-        <td mat-cell *matCellDef="let element"> {{element.role}} </td>
-      </ng-container>
-    
-      <!-- password Column -->
-      <ng-container matColumnDef="password">
-        <th mat-header-cell *matHeaderCellDef> password </th>
-        <td mat-cell *matCellDef="let element"> {{element.password}} </td>
-      </ng-container>
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+
+        <!-- id_usuario Column -->
+        <ng-container matColumnDef="id_usuario">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.id_usuario}} </td>
+        </ng-container>
+
+        <!-- username Column -->
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef> username </th>
+          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        </ng-container>
+
+        <!-- role Column -->
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef> role </th>
+          <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+        </ng-container>
+
+        <!-- password Column -->
+        <ng-container matColumnDef="password">
+          <th mat-header-cell *matHeaderCellDef> password </th>
+          <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
 
   </ion-col>
 </ion-row>
