--- a/ClassNote/src/app/components/form-aula/form-aula.component.html
+++ b/ClassNote/src/app/components/form-aula/form-aula.component.html
@@ -1,51 +1,60 @@
-    <ion-col size="12">
-      <ion-row>
-        <ion-col class="ion-text-start ion-align-items-center">
-          <ion-icon name="return-up-back" slot="start"></ion-icon>
-          <h2 class="ion-text-center">{{ nomeTurma }}</h2>
-        </ion-col>
-      </ion-row>
+<ion-col size="12">
+  <ion-row>
+    <ion-col class="ion-text-start ion-align-items-center">
+      <ion-icon name="return-up-back" slot="start"></ion-icon>
+      <h2 class="ion-text-center">{{ nomeTurma }}</h2>
+    </ion-col>
+  </ion-row>
 
 
   <form mode="md" (ngSubmit)="submitForm(FormData)" [formGroup]="FormData">
 
-        <ion-list>
-          <!-- Mat-Autocomplete para Usuários -->
-          <ion-item>
-            <ion-icon name="person" slot="start"></ion-icon>
-            <mat-form-field style="opacity: 0.6;" appearance="fill">
-              <mat-label>Professor</mat-label>
-              <input matInput placeholder="Selecione o professor" formControlName="username" readonly>
-              <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let disciplina of filteredDisciplinas | async" [value]="disciplina">
-                  {{ disciplina.username }}
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
-          </ion-item>
+    <ion-list lines="none">
+      <!-- Mat-Autocomplete para Usuários -->
+      <ion-item>
+        <ion-icon name="person" slot="start"></ion-icon>
+        <mat-form-field style="opacity: 0.6;" appearance="fill">
+          <mat-label>Professor</mat-label>
+          <input matInput placeholder="Selecione o professor" formControlName="username" readonly>
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let disciplina of filteredDisciplinas | async" [value]="disciplina">
+              {{ disciplina.username }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </ion-item>
 
-          <!-- Mat-Autocomplete para Disciplinas -->
-          <ion-item>
-            <ion-icon name="school" slot="start"></ion-icon>
-            <mat-form-field appearance="fill">
-              <mat-label>Disciplina</mat-label>
-              <input [value]="aulaSelecionada.nome_disciplina" matInput placeholder="Selecione a disciplina"
-                [formControl]="disciplinaCtrl" [matAutocomplete]="auto2">
+      <!-- Mat-Autocomplete para Disciplinas -->
+      <ion-item>
+        <ion-icon name="school" slot="start"></ion-icon>
+        <mat-form-field appearance="fill">
+          <mat-label>Disciplina</mat-label>
+          <input [value]="aulaSelecionada.nome_disciplina" matInput placeholder="Selecione a disciplina"
+            [formControl]="disciplinaCtrl" [matAutocomplete]="auto2">
 
-              <mat-autocomplete #auto2="matAutocomplete" (optionSelected)="onDisciplinaSelected($event)"
-                [displayWith]="displayFn">
-                <mat-option *ngFor="let disciplina of filteredDisciplinas | async" [value]="disciplina">
-                  {{ disciplina.nome_disciplina }}
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
-          </ion-item>
+          <mat-autocomplete #auto2="matAutocomplete" (optionSelected)="onDisciplinaSelected($event)"
+            [displayWith]="displayFn">
+            <mat-option *ngFor="let disciplina of filteredDisciplinas | async" [value]="disciplina">
+              {{ disciplina.nome_disciplina }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </ion-item>
 
-          <ion-item>
-            <ion-icon name="document-text" slot="start"></ion-icon>
-            <ion-label position="floating">Conteúdo</ion-label>
-            <ion-textarea type="text" rows="4" name="conteudo" formControlName="conteudo" required></ion-textarea>
-          </ion-item>
+      <ion-item>
+        <ion-icon name="document-text" slot="start"></ion-icon>
+        <ion-label position="floating">Conteúdo</ion-label>
+        <ion-textarea type="text" rows="4" name="conteudo" formControlName="conteudo" required></ion-textarea>
+      </ion-item>
+
+      <ion-item>
+        <mat-form-field class="datepicker-field">
+          <mat-label>Selecione a Data</mat-label>
+          <input matInput [value]="aulaSelecionada.data_aula" disabled>
+          <mat-datepicker-toggle matSuffix [for]="picker" disabled></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </ion-item>
 
     </ion-list>
     <ion-button
