--- a/ClassNote/src/app/components/home-admin/disciplinas/disciplinas.component.html
+++ b/ClassNote/src/app/components/home-admin/disciplinas/disciplinas.component.html
@@ -1,5 +1,30 @@
-<p>
-  disciplinas works!
-</p>
-
+<ion-row>
+  <ion-col mode="md" size="12" class="ion-justify-content-center ion-text-center">
+    <ion-row>
+      <ion-col>
+        <ion-title>Disciplinas</ion-title>
+      </ion-col>
+    </ion-row>
+    <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="Disciplina"> <!-- Match the column ID with the one defined in the component -->
+        <th mat-header-cell *matHeaderCellDef> Disciplina </th>
+        <td mat-cell *matCellDef="let element"> {{ element.nome_disciplina }} </td>
+      </ng-container>
+      <ng-container matColumnDef="edit_create">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element">
+          <ion-icon name="pencil"></ion-icon>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element">
+          <ion-icon name="trash"></ion-icon>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </ion-col>
+</ion-row>
 <router-outlet></router-outlet>
