--- a/ClassNote/src/app/components/new-form-aula/new-form-aula.component.html
+++ b/ClassNote/src/app/components/new-form-aula/new-form-aula.component.html
@@ -41,7 +41,17 @@
       <ion-item>
         <ion-icon name="document-text" slot="start"></ion-icon>
         <ion-label position="floating">Conteúdo</ion-label>
-        <ion-textarea minLength="3" type="text" rows="4" name="conteudo" formControlName="conteudo" required></ion-textarea>
+        <ion-textarea minLength="3" type="text" rows="4" name="conteudo" formControlName="conteudo"
+          required></ion-textarea>
+      </ion-item>
+
+      <ion-item>
+        <mat-form-field class="datepicker-field">
+          <mat-label>Selecione a Data</mat-label>
+          <input matInput [value]="dataAula" disabled>
+          <mat-datepicker-toggle matSuffix [for]="picker" disabled></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
       </ion-item>
 
     </ion-list>
