--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -1,9 +1,5 @@
 <ion-menu side="start" contentId="main-content">
   <ion-header>
-    <ion-toolbar color="primary" style="border-bottom: 1px solid #fff;">
-      <ion-title>Class Notes</ion-title>
-    </ion-toolbar>
-
     <ion-toolbar color="primary">
       <ion-row>
         <ion-col size="3">
@@ -20,19 +16,19 @@
       <ion-list-header mode="ios">
         <ion-label>Gerenciamento</ion-label>
       </ion-list-header>
-      <ion-item routerLink="inicio" class="ion-color-primary">
+      <ion-item routerLinkActive="menu-item-active" routerLink="inicio" class="ion-color-primary">
         <ion-label>Início</ion-label>
         <ion-icon name="home"></ion-icon>
       </ion-item>
-      <ion-item routerLink="turmas" >
+      <ion-item routerLinkActive="menu-item-active" routerLink="turmas">
         <ion-label>Turmas</ion-label>
         <ion-icon name="people"></ion-icon>
       </ion-item>
-      <ion-item routerLink="disciplinas" >
+      <ion-item routerLinkActive="menu-item-active" routerLink="disciplinas">
         <ion-label>Disciplinas</ion-label>
         <ion-icon name="book"></ion-icon>
       </ion-item>
-      <ion-item routerLink="usuarios">
+      <ion-item routerLinkActive="menu-item-active" routerLink="usuarios">
         <ion-label>Usuários</ion-label>
         <ion-icon name="people-circle"></ion-icon>
       </ion-item>
@@ -40,7 +36,7 @@
       <ion-list-header mode="ios">
         <ion-label>Conta</ion-label>
       </ion-list-header>
-      <ion-item routerLink="/minha-conta">
+      <ion-item routerLinkActive="menu-item-active" routerLink="my-account">
         <ion-label>Minha Conta</ion-label>
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-item>
@@ -50,6 +46,8 @@
       </ion-item>
     </ion-list>
   </ion-content>
+
+
 
 </ion-menu>
 
@@ -98,19 +96,19 @@
         <ion-list-header mode="ios">
           <ion-label>Gerenciamento</ion-label>
         </ion-list-header>
-        <ion-item routerLink="inicio" class="ion-color-primary">
+        <ion-item routerLinkActive="menu-item-active" routerLink="inicio" class="ion-color-primary">
           <ion-label>Início</ion-label>
           <ion-icon name="home"></ion-icon>
         </ion-item>
-        <ion-item routerLink="turmas" >
+        <ion-item routerLinkActive="menu-item-active" routerLink="turmas">
           <ion-label>Turmas</ion-label>
           <ion-icon name="people"></ion-icon>
         </ion-item>
-        <ion-item routerLink="disciplinas" >
+        <ion-item routerLinkActive="menu-item-active" routerLink="disciplinas">
           <ion-label>Disciplinas</ion-label>
           <ion-icon name="book"></ion-icon>
         </ion-item>
-        <ion-item routerLink="usuarios">
+        <ion-item routerLinkActive="menu-item-active" routerLink="usuarios">
           <ion-label>Usuários</ion-label>
           <ion-icon name="people-circle"></ion-icon>
         </ion-item>
@@ -118,7 +116,7 @@
         <ion-list-header mode="ios">
           <ion-label>Conta</ion-label>
         </ion-list-header>
-        <ion-item routerLink="/minha-conta">
+        <ion-item routerLinkActive="menu-item-active" routerLink="my-account">
           <ion-label>Minha Conta</ion-label>
           <ion-icon name="person-circle-outline"></ion-icon>
         </ion-item>
@@ -131,7 +129,7 @@
 
     </ion-col>
     <ion-col class="column column-scrollable">
-      
+
       <router-outlet></router-outlet>
 
     </ion-col>
