modais de edição e criação de usuarios no setor administrador do sistema criado. desenvolver funções para melhoria do sistema nessa area de usuarios.

--- a/ClassNote/src/app/pages/login/login.page.html
+++ b/ClassNote/src/app/pages/login/login.page.html
@@ -33,8 +33,8 @@
     <ion-grid class="ion-justify-content-center ion-padding">
       <ion-row class="ion-justify-content-center">
         <ion-col size-sm="8" size="12" class="ion-text-center">
-          <img class="fade-in" style="position: absolute;" src="../../../assets/img/logo-anglo-tatui.png" alt="Logo" width="70%"
-            style="max-width: 225px;">
+          <img class="fade-in" style="position: absolute;" src="../../../assets/img/logo-anglo-tatui.png" alt="Logo"
+            width="70%" style="max-width: 225px;">
         </ion-col>
       </ion-row>
       <ion-row class="ion-justify-content-center">
@@ -55,23 +55,18 @@
           </form>
           <ion-row>
             <ion-col class="ion-margin-top">
-              <span>Esqueceu sua senha? </span><span routerLink="/forgot-password" style="cursor: pointer; color: #1970C0;">Clique aqui!</span>
+              <span>Esqueceu sua senha? </span><span routerLink="/forgot-password"
+                style="cursor: pointer; color: #1970C0;">Clique aqui!</span>
             </ion-col>
           </ion-row>
         </ion-col>
         <ion-row class="footer">
           <ion-col size="8" class="ion-text-center">
-            <p style="opacity: 0.5; font-size: 12px;">Desenvolvido pelo Departamento de Tecnologia e Marketing do Colégio Anglo Tatuí.</p>
+            <p style="opacity: 0.5; font-size: 12px;">Desenvolvido por João Marins,<br> Departamento de Tecnologia e
+              Marketing do Colégio Anglo Tatuí.</p>
           </ion-col>
         </ion-row>
       </ion-row>
-
-
-
-
-
-
-
     </ion-grid>
   </div>
 </ion-content>
