--- a/ClassNote/src/app/components/home-admin/disciplinas/disciplinas.component.html
+++ b/ClassNote/src/app/components/home-admin/disciplinas/disciplinas.component.html
@@ -6,25 +6,41 @@
       </ion-col>
     </ion-row>
     <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="Disciplina"> <!-- Match the column ID with the one defined in the component -->
-        <th mat-header-cell *matHeaderCellDef> Disciplina </th>
+
+      <ng-container matColumnDef="Disciplina">
+        <th mat-header-cell *matHeaderCellDef> Disciplinas </th>
         <td mat-cell *matCellDef="let element"> {{ element.nome_disciplina }} </td>
       </ng-container>
+
       <ng-container matColumnDef="edit_create">
-        <th mat-header-cell *matHeaderCellDef>  </th>
-        <td mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element" class="ion-text-end">
           <ion-icon name="pencil"></ion-icon>
         </td>
       </ng-container>
+
       <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>  </th>
-        <td mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element" class="ion-text-end">
           <ion-icon name="trash"></ion-icon>
         </td>
       </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
     </table>
   </ion-col>
 </ion-row>
+
+<ion-row>
+  <ion-col>
+    <ion-fab>
+      <ion-fab-button style="display: flex; position: fixed; bottom: 10px; right: 10px;">
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </ion-col>
+</ion-row>
+
 <router-outlet></router-outlet>
