--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -3,12 +3,15 @@
     <ion-toolbar color="primary">
       <ion-row>
         <ion-col size="3">
-          <img src=".././../../../assets/img/logo-anglo-tatui.png" alt="logo-anglo-tatui">
+          <ion-avatar style="width: 45px; height: 45px; margin: 5px;" *ngIf="usuario.username">
+            <ion-img [src]="'https://ui-avatars.com/api/?name=' + gerarSVG(usuario.username)"></ion-img>
+          </ion-avatar>
         </ion-col>
-        <ion-col style="margin: auto;" size="9">Bem vindo, {{usuario.username}}</ion-col>
+        <ion-col style="margin: auto;" size="9">
+          Bem vindo, {{usuario.username}}
+        </ion-col>
       </ion-row>
     </ion-toolbar>
-
   </ion-header>
 
   <ion-content style="height: 100%;" class="ion-no-padding ion-no-margin">
@@ -47,7 +50,12 @@
     </ion-list>
   </ion-content>
 
-
+  <ion-footer>
+    <ion-col size="8" class="ion-text-center">
+      <p style="opacity: 0.5; font-size: 12px;">Desenvolvido por João Marins,<br> Departamento de Tecnologia e
+        Marketing do Colégio Anglo Tatuí.</p>
+    </ion-col>
+  </ion-footer>
 
 </ion-menu>
 
@@ -85,9 +93,13 @@
         <ion-toolbar color="primary">
           <ion-row>
             <ion-col size="3">
-              <img src=".././../../../assets/img/logo-anglo-tatui.png" alt="logo-anglo-tatui">
+              <ion-avatar style="width: 45px; height: 45px; margin: 5px;" *ngIf="usuario.username">
+                <ion-img [src]="'https://ui-avatars.com/api/?name=' + gerarSVG(usuario.username)"></ion-img>
+              </ion-avatar>
             </ion-col>
-            <ion-col style="margin: auto;" size="9">Bem vindo, {{username}}</ion-col>
+            <ion-col style="margin: auto;" size="9">
+              Bem vindo, {{username}}
+            </ion-col>
           </ion-row>
         </ion-toolbar>
       </ion-header>
