--- a/ClassNote/src/app/components/home-admin/usuario-components/form-edit-usuario/form-edit-usuario.component.html
+++ b/ClassNote/src/app/components/home-admin/usuario-components/form-edit-usuario/form-edit-usuario.component.html
@@ -25,27 +25,33 @@
             </mat-form-field>
           </div>
 
-          <div>
+          <div *ngIf="!changePassword">
             <mat-form-field class="example-full-width">
               <mat-label>Password</mat-label>
-              <input matInput placeholder="Digite sua senha" type="password" formControlName="password"
-                [attr.readonly]="!changePassword ? true : null">
+              <input matInput placeholder="Digite sua senha" type="password" [value]="password"
+                [disabled]="!changePassword">
             </mat-form-field>
           </div>
-
-
 
           <div *ngIf="changePassword">
             <div>
               <mat-form-field class="example-full-width">
+                <mat-label>Nova Senha</mat-label>
+                <input matInput placeholder="Nova senha" type="password" formControlName="newPassword">
+              </mat-form-field>
+            </div>
+
+            <div>
+              <mat-form-field class="example-full-width">
                 <mat-label>Confirmar Senha</mat-label>
-                <input matInput placeholder="Confirmar senha" type="password" formControlName="confirmPassword">
+                <input matInput placeholder="Confirmar senha" type="password" formControlName="confirmNewPassword">
               </mat-form-field>
             </div>
           </div>
 
-          <div>
-            <ion-button (click)="toggleChangePassword()">Alterar Senha</ion-button>
+          <div class="mudar-senha">
+            <p *ngIf="!changePassword" (click)="toggleChangePassword()">Alterar Senha</p>
+            <p *ngIf="changePassword" (click)="toggleChangePassword()">Cancelar</p>
           </div>
 
           <div>
