--- a/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.scss
+++ b/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.scss
@@ -1,5 +1,5 @@
 .table-row:hover {
-  transition: 0.2s;
+  transition: 0.3s;
   background: #8a8a8a2c;
   cursor: pointer;
 
@@ -12,3 +12,16 @@
   max-height: 100%;
   width: 90%;
 }
+
+.delete-icon{
+  padding: 8px;
+  border-radius: 20px;
+  opacity: 0.5;
+}
+
+.delete-icon:hover{
+  transition: 0.5s;
+  color: #fff;
+  background-color: red;
+}
+
