alguns progressos!!! (terminar o formgroup de form-new-disciplinas)

--- a/ClassNote/src/app/components/home-admin/disciplina-components/disciplinas/disciplinas.component.html
+++ b/ClassNote/src/app/components/home-admin/disciplina-components/disciplinas/disciplinas.component.html
@@ -36,7 +36,7 @@
 <ion-row>
   <ion-col>
     <ion-fab>
-      <ion-fab-button style="display: flex; position: fixed; bottom: 10px; right: 10px;">
+      <ion-fab-button (click)="openNewFormPopover($event)" style="display: flex; position: fixed; bottom: 10px; right: 10px;">
         <ion-icon name="add-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab>
