--- a/ClassNote/src/app/components/home-admin/usuario-components/form-new-usuario/form-new-usuario.component.html
+++ b/ClassNote/src/app/components/home-admin/usuario-components/form-new-usuario/form-new-usuario.component.html
@@ -1,9 +1,9 @@
 <ion-content style="height: 100%; justify-content: center; align-items: center;">
   <ion-row>
-    <ion-col size="12" class="ion-text-center">
+    <ion-col size="12" class="ion-text-center ion-align-items-center">
       <form [formGroup]="form" (ngSubmit)="createUser(form)">
 
-        <ion-list lines="none">
+        <ion-list lines="none" style="margin-top: 3em;">
           <div style="display: flex; justify-content: center; align-items: center;">
             <ion-avatar style="width: 100px; height: 100px; margin-bottom: 10px; margin-top: 10px;"
               *ngIf="form.get('username')?.value !== null">
@@ -67,9 +67,18 @@
           <div>
             <ion-button type="submit" [disabled]="form.invalid">Enviar</ion-button>
           </div>
+
         </ion-list>
 
       </form>
+
+      <ion-row style="position: absolute; top: 0%;">
+        <ion-col (click)="back()" class="ion-margin ion-text-start voltar" style="opacity: 0.7; font-size: 1.2em;">
+          <ion-icon name="return-up-back-outline"></ion-icon>
+          Voltar
+        </ion-col>
+      </ion-row>
+      
     </ion-col>
   </ion-row>
 </ion-content>
