--- a/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.html
+++ b/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.html
@@ -10,39 +10,42 @@
     <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>
+          <ion-icon style="font-size: 1.5em; padding: 15px; text-align: center;"
+            name="person-outline"></ion-icon>
+        </th>
         <td mat-cell *matCellDef="let element" class="action-cell">
           <ion-avatar style="width: 40px; height: 40px; margin: 3px;" *ngIf="element.username">
             <ion-img [src]="'https://ui-avatars.com/api/?name=' + gerarSVG(element.username)"></ion-img>
           </ion-avatar>
-
         </td>
       </ng-container>
 
       <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef>username</th>
+        <th mat-header-cell *matHeaderCellDef>Usuário</th>
         <td mat-cell *matCellDef="let element">{{element.username}}</td>
       </ng-container>
 
       <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>e-mail</th>
-        <td mat-cell *matCellDef="let element"> email.email.com </td>
+        <th mat-header-cell *matHeaderCellDef>E-mail</th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
 
       <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef>role</th>
+        <th mat-header-cell *matHeaderCellDef>Acesso</th>
         <td mat-cell *matCellDef="let element">{{element.role}}</td>
       </ng-container>
 
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <ion-icon class="delete-icon" name="person-remove-outline"></ion-icon>
+          <ion-icon id="delete-trigger" class="delete-icon" name="person-remove-outline" (click)="deleteUser(element.id_usuario)"></ion-icon>
         </td>
-      </ng-container>
+      </ng-container>      
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr class="table-row" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="inspectUser(row)"></tr>
+      <tr class="table-row" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="handleRowClick($event, row)"></tr>
+
     </table>
 
   </ion-col>
