--- a/ClassNote/src/global.scss
+++ b/ClassNote/src/global.scss
@@ -26,3 +26,9 @@
 @import "@ionic/angular/css/flex-utils.css";
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+@media screen and (min-width: 768px) {
+  .custom-modal {
+    --height: 90%;
+  }
+}
