--- a/ClassNote/src/app/components/home-admin/usuario-components/form-edit-usuario/form-edit-usuario.component.html
+++ b/ClassNote/src/app/components/home-admin/usuario-components/form-edit-usuario/form-edit-usuario.component.html
@@ -1,7 +1,7 @@
 <ion-content style="height: 100%; justify-content: center; align-items: center;">
   <ion-row>
     <ion-col size="12" class="ion-text-center ion-align-items-center">
-      <form [formGroup]="form" (ngSubmit)="UpdateUser(form)">
+      <form [formGroup]="form" (ngSubmit)="UpdateUser()">
 
         <ion-list lines="none" style="margin-top: 3em;">
           <div style="display: flex; justify-content: center; align-items: center;">
