--- a/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.scss
+++ b/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.scss
@@ -26,3 +26,9 @@
   color: #fff;
   background-color: rgba(255, 0, 0, 0.589);
 }
+
+.table-container {
+  border-radius: 20px;
+  max-height: 40em;
+  overflow-y: auto;
+}
