--- a/ClassNote/src/app/components/home-admin/disciplina-components/disciplinas/disciplinas.component.html
+++ b/ClassNote/src/app/components/home-admin/disciplina-components/disciplinas/disciplinas.component.html
@@ -5,38 +5,42 @@
         <ion-title>Disciplinas</ion-title>
       </ion-col>
     </ion-row>
-    <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <div class="table-container ion-padding">
+      <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="Disciplina">
-        <th mat-header-cell *matHeaderCellDef> Disciplinas </th>
-        <td mat-cell *matCellDef="let element"> {{ element.nome_disciplina }} </td>
-      </ng-container>
+        <ng-container matColumnDef="edit_create">
+          <th mat-header-cell *matHeaderCellDef> </th>
+          <td mat-cell *matCellDef="let element" class="ion-text-end">
+            <ion-icon class="edit-icon" (click)="openEditFormPopover($event, element)" name="pencil"></ion-icon>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="edit_create">
-        <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element" class="ion-text-end">
-          <ion-icon name="pencil"></ion-icon>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="Disciplina">
+          <th mat-header-cell *matHeaderCellDef> Disciplinas </th>
+          <td mat-cell *matCellDef="let element"> {{ element.nome_disciplina }} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element" class="ion-text-end">
-          <ion-icon name="trash"></ion-icon>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> </th>
+          <td mat-cell *matCellDef="let element" class="ion-text-end">
+            <ion-icon class="delete-icon" (click)="excluirDisciplina(element.id_disciplina)" name="trash"></ion-icon>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr class="table-row" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-    </table>
+      </table>
+    </div>
+
   </ion-col>
 </ion-row>
 
 <ion-row>
   <ion-col>
     <ion-fab>
-      <ion-fab-button (click)="openNewFormPopover($event)" style="display: flex; position: fixed; bottom: 10px; right: 10px;">
+      <ion-fab-button (click)="openNewFormPopover($event)"
+        style="display: flex; position: fixed; bottom: 10px; right: 10px;">
         <ion-icon name="add-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab>
