--- a/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.html
+++ b/ClassNote/src/app/components/home-admin/usuario-components/usuarios/usuarios.component.html
@@ -7,46 +7,50 @@
       </ion-col>
     </ion-row>
 
-    <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <div class="table-container ion-margin">
+      <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>
-          <ion-icon style="font-size: 1.5em; padding: 15px; text-align: center;"
-            name="person-outline"></ion-icon>
-        </th>
-        <td mat-cell *matCellDef="let element" class="action-cell">
-          <ion-avatar style="width: 40px; height: 40px; margin: 3px;" *ngIf="element.username">
-            <ion-img [src]="'https://ui-avatars.com/api/?name=' + gerarSVG(element.username)"></ion-img>
-          </ion-avatar>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>
+            <ion-icon style="font-size: 1.5em; padding: 15px; text-align: center;" name="person-outline"></ion-icon>
+          </th>
+          <td mat-cell *matCellDef="let element" class="action-cell">
+            <ion-avatar style="width: 40px; height: 40px; margin: 3px;" *ngIf="element.username">
+              <ion-img [src]="'https://ui-avatars.com/api/?name=' + gerarSVG(element.username)"></ion-img>
+            </ion-avatar>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef>Usuário</th>
-        <td mat-cell *matCellDef="let element">{{element.username}}</td>
-      </ng-container>
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef>Usuário</th>
+          <td mat-cell *matCellDef="let element">{{element.username}}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>E-mail</th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-      </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>E-mail</th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef>Acesso</th>
-        <td mat-cell *matCellDef="let element">{{element.role}}</td>
-      </ng-container>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef>Acesso</th>
+          <td mat-cell *matCellDef="let element">{{element.role}}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <ion-icon id="delete-trigger" class="delete-icon" name="person-remove-outline" (click)="deleteUser(element.id_usuario)"></ion-icon>
-        </td>
-      </ng-container>      
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <ion-icon id="delete-trigger" class="delete-icon" name="person-remove-outline"
+              (click)="deleteUser(element.id_usuario)"></ion-icon>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr class="table-row" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="handleRowClick($event, row)"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr class="table-row" mat-row *matRowDef="let row; columns: displayedColumns;"
+          (click)="handleRowClick($event, row)"></tr>
 
-    </table>
+      </table>
+    </div>
+
 
   </ion-col>
 </ion-row>
