--- a/ClassNote/src/app/components/new-form-aula/new-form-aula.component.html
+++ b/ClassNote/src/app/components/new-form-aula/new-form-aula.component.html
@@ -58,8 +58,8 @@
     <ion-button
       style="margin-bottom: 0; position: absolute; bottom: 0; left: 0; right: 0; margin-left: auto; margin-right: auto;"
       mode="ios" type="submit" expand="full">
-      Editar
-      <ion-icon name="create-outline" slot="end"></ion-icon>
+      Adicionar
+      <ion-icon name="send-outline" slot="end"></ion-icon>
     </ion-button>
   </form>
 </ion-col>
